Fix overlapping text in mobile

--- a/2020/css/luukku.css
+++ b/2020/css/luukku.css
@@ -171,7 +171,7 @@ footer {
 }
 
 .vote-footer form {
-  display: inline;
+  display: block;
 }
 
 body.video .vote-footer {
